<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.loyer.people_around.LoginActivity"
    android:background="@color/login_screen"
    android:orientation="vertical"
    android:id="@+id/loginActivity"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:padding="15dp"
            android:hint="@string/editText_email"
            android:textAlignment="center"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:padding="15dp"
            android:hint="@string/editText_password"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="5dp"

        >
        <Button
            style="@style/Button"
            android:id="@+id/btnLoginReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_register_button"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="register"

            />
        <Button
            style="@style/Button"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login_button"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="logIn"
            />


    </LinearLayout>




</LinearLayout>
